# mps

./: .buildinfo  .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.html  LICENSE  Makefile  README.md  _config.yml  _toc.yml  binary_executables.html  demo.html  genindex.html  index.html  install.html  modules.html  mps.html  mps.scripts.html  mps2mp4.html  mps_analyze.html  mps_motion.html  mps_summary.html  objects.inv  py-modindex.html  pyproject.toml  python_api.html  requirements.txt  requirements_dev.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: github-pages.yml  installer.yml  main.yml  pre-commit.yml  pypi.yml
_modules/: index.html
_modules/mps/: analysis.html  average.html  load.html  plotter.html  tissue_detection.html  utils.html
_sources/: binary_executables.md.txt  demo.rst.txt  index.rst  index.rst.txt  mps.rst  mps.rst.txt  mps.scripts.rst  mps2mp4.md  mps2mp4.md.txt  mps_analyze.md.txt  mps_motion.md.txt  mps_summary.md
docs/: Makefile  api.rst  binary_executables.md  conf.py  index.rst  make.bat  readme.rst
docs/source/: binary_executables.md  conf.py  index.rst  install.md  mps_analyze.md  mps_motion.md  mps_summary.md  python_api.md
mps/: __init__.py  __main__.py  analysis.py  average.py  bin_utils.py  czifile.py  ead.py  load.py  nd2file.py  plotter.py  tifffile.py  utils.py
mps/scripts/: __init__.py  analyze.py  mps2mp4.py  phase_plot.py  split_pacing.py  summary.py
pyinstaller_hooks/: hook-ap_features.py
tests/: conftest.py  data.mat  test_analysis.py  test_average.py  test_czi_channel.py  test_features.py  test_load.py  test_scripts.py
(+9 files in other folders)
