[metadata]
name = mps
description = Tools for working with mps files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ComputationalPhysiology/mps
author = Henrik Finsberg
author_email = henriknf@simula.no
license = GNU General Public License v3 (GPLv3)
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = action potential, cell models, features

[options]
packages = find:
install_requires =
    ap_features
    imageio
    imageio-ffmpeg
    matplotlib
    numpy
    scipy
    tifffile
    typer
    xmltodict
    dataclasses;python_version < "3.7"
python_requires = >=3.6
zip_safe = False

[options.extras_require]
dev =
    Sphinx
    black
    bump2version
    flake8
    ipython
    isort
    mypy
    pdbpp
    pip
    pre-commit
    pytest
    pytest-cov
    sphinx
    twine
    types-PyYAML
    wheel

[flake8]
exclude = docs
ignore = E203, E266, E501, W503, E731
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[aliases]
test = pytest

[tool:pytest]
addopts = --cov=mps --cov-report html --cov-report xml --cov-report term-missing -v
testpaths =
    tests

[mypy]
files = mps,tests
ignore_missing_imports = true
exclude = docs

[coverage:run]
omit =
    mps/nd2file.py
    mps/czifile.py
    mps/tifffile.py
